--- a/1 Intro.html
+++ b/1 Intro.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Hello world!</title>
-	<script>
+	<script type="text/javascript">
 		document.write("hello world, hi mom");
 	</script>
 </head>
