Chapter 17 is done!

--- a/10 Mathmatical operator .html
+++ b/10 Mathmatical operator .html
@@ -3,10 +3,14 @@
 	<meta charset="utf-8">
 	<title>Hello world!</title>
 	<script type="text/javascript">
-		window.alert("Click OK to enter my webpage. . .");
 
-		var title = "Welcome to my webpage";
-		document.write("<h1>"+title+"</h1>");
+		var first = 3
+		var second = 2
+		var calc = first + 2
+
+		window.alert(calc+second);
+
+
 	</script>
 </head>
 
