--- a/9 scope .html
+++ b/9 scope .html
@@ -3,10 +3,13 @@
 	<meta charset="utf-8">
 	<title>Hello world!</title>
 	<script type="text/javascript">
-		window.alert("Click OK to enter my webpage. . .");
+		var first = "Akira";
+		function first_name(){
+			var second = "Sato";
+			document.write(first+second);
+		}
 
-		var title = "Welcome to my webpage";
-		document.write("<h1>"+title+"</h1>");
+		document.write(first);
 	</script>
 </head>
 
