--- a/11 Mathmatical operator2 .html
+++ b/11 Mathmatical operator2 .html
@@ -3,10 +3,12 @@
 	<meta charset="utf-8">
 	<title>Hello world!</title>
 	<script type="text/javascript">
-		window.alert("Click OK to enter my webpage. . .");
+		var victor = 33;
 
-		var title = "Welcome to my webpage";
-		document.write("<h1>"+title+"</h1>");
+		victor += 1;
+
+		window.alert(victor);
+
 	</script>
 </head>
 
