--- a/27  Predefined objects  .html
+++ b/27  Predefined objects  .html
@@ -3,28 +3,23 @@
 	<meta charset="utf-8">
 	<title>Hello world!</title>
 	<script type="text/javascript">
-		function Hero(name, armor, strength, attack){
-			this.name = name
-			this.armor = armor;
-			this.strength = strength;
-			this.attack = attack;
+		//NAVIGATOR OBJECT
+		// window.alert("Your blowser is : "+navigator.appName);
 
-		}
+		// if (navigator.appName == "Microsoft Internet Expolorer"){
+		// 	document.write("Welcome IE users.");
+		// }else{
+		// 	document.write("You need IE to run this script!");
+		// }
 
-		var dwarf = new Hero("dwarf", "5", "5", "5");
-		var barbarian = new Hero("barbarian", "7", "7", "7");
-		var elf = new Hero("elf", "9", "9", "9");
+		// 	document.write("Java is Enabled");
+		// }else{
+		// 	document.write("Java is not enabeld on your brouwser!");
+		// }
 
-		// var character = elf;
+		// window.alert("my brouwser has visited: "+history.length+" Pages");
 
-		// document.write("<h3>"+character.name+ " Properties</h3>");
-		// document.write("Armor: "+character.armor+"<br />");
-		// document.write("Strength: "+character.strength+"<br />");
-		// document.write("Attack: "+character.attack+"<br />");
-
-		for (var x in dwarf){
-			document.write(x + ":" + dwarf[x]+ "<br>");
-		}
+		alert(history.back());
 	</script>
 </head>
 
